deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k-producer-service
  labels:
    app.kubernetes.io/name: k-producer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app.kubernetes.io/name: k-producer
